--- a/data-collection.ipynb
+++ b/data-collection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,57 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Player\n",
-      "Pos\n",
-      "Team\n",
-      "Bye\n",
-      "Notes\n",
-      "Rank\n",
-      "Y! Roto\n",
-      "Δ\n",
-      "Y! Old\n",
-      "Std\n",
-      "Δ.1\n",
-      "Std Old\n",
-      "PPR\n",
-      "Δ.2\n",
-      "PPR Old\n",
-      "% Own\n",
-      "GP\n",
-      "GS\n",
-      "Comp\n",
-      "Inc\n",
-      "Yds\n",
-      "TD\n",
-      "Int\n",
-      "Pic6\n",
-      "Sks\n",
-      "1st\n",
-      "Att\n",
-      "Yds.1\n",
-      "TD.1\n",
-      "1st.1\n",
-      "Tgt\n",
-      "Rec\n",
-      "Yds.2\n",
-      "TD.2\n",
-      "1st.2\n",
-      "Yds.3\n",
-      "TD.3\n",
-      "2PT\n",
-      "Total\n",
-      "Lost\n",
-      "Fan Pts\n",
-      "PPG\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -82,8 +34,15 @@
    "source": [
     "df = pd.read_excel('2022-offense.xlsx', sheet_name='Offense_Prior_Actuals', header=3)\n",
     "\n",
-    "for i in df.columns.tolist():\n",
-    "    print(i)"
+    "# Drop columns that we don't need\n",
+    "drop_columns = ['GS', 'Bye', 'Notes', 'Rank', 'Y! Roto', 'Δ', 'Y! Old', 'Std', 'Δ.1', 'Std Old', 'PPR', 'Δ.2', 'PPR Old', '% Own', 'Fan Pts', 'PPG']\n",
+    "df = df.drop(drop_columns, axis=1)\n",
+    "\n",
+    "# Change names of duplicate columns\n",
+    "updated_columns = {'Yds': 'Passing_Yds', 'Yds.1': 'Rushing_Yds', 'Yds.2': 'Receiving_Yds', 'Yds.3': 'Return_Yds', \n",
+    "                   'TD': 'Passing_Td', 'TD.1': 'Rushing_Td', 'TD.2': 'Receiving_Td', 'TD.3': 'Return_Td', \n",
+    "                   '1st': 'Passing_1st', '1st.1': 'Rushing_1st', '1st.2': 'Receiving_1st'}\n",
+    "df = df.rename(columns=updated_columns)\n"
    ]
   },
   {
@@ -91,7 +50,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get y - actual values from the next year (we do not have 2023 but could get them) - we will eventually need them?"
+   ]
   }
  ],
  "metadata": {
