cleaned up notebook

--- a/data-collection.ipynb
+++ b/data-collection.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,25 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get y - actual values from the next year (we do not have 2023 but could get them) - we will eventually need them?\n",
-    "QB_data = df[df[\"Pos\"] == \"QB\"]\n",
-    "\n",
-    "# Get the list of all column names from headers\n",
-    "qb_column_headers = list(QB_data.columns.values)\n",
-    "# print(\"The Column Header :\", qb_column_headers)\n",
-    "\n",
-    "qb_drop_columns = ['Tgt', 'Rec', 'Receiving_Yds', 'Receiving_Td', 'Receiving_1st', 'Return_Yds', 'Return_Td', '2PT',]\n",
-    "QB_data = QB_data.drop(qb_drop_columns, axis=1)\n",
-    "# QB_data\n"
+    "QB_data, RB_data, WR_data, TE_data = football.makeRegularData(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,45 +156,6 @@
    "metadata": {},
    "source": [
     "This is isolating data for running backs, wide receivers, and tight ends."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RB_data = df[df[\"Pos\"] == \"RB\"]\n",
-    "\n",
-    "rb_drop_columns = [ 'Comp', 'Inc', 'Passing_Yds', 'Passing_Td', 'Int', 'Pic6', 'Sks', 'Passing_1st']\n",
-    "RB_data = RB_data.drop(rb_drop_columns, axis=1)\n",
-    "# RB_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "WR_data = df[df[\"Pos\"] == \"WR\"]\n",
-    "\n",
-    "wr_drop_columns = ['Comp', 'Inc', 'Passing_Yds', 'Passing_Td', 'Int', 'Pic6', 'Sks', 'Passing_1st']\n",
-    "WR_data = WR_data.drop(rb_drop_columns, axis=1)\n",
-    "# WR_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TE_data = df[df[\"Pos\"] == \"TE\"]\n",
-    "\n",
-    "te_drop_columns = ['Comp', 'Inc', 'Passing_Yds', 'Passing_Td', 'Int', 'Pic6', 'Sks', 'Passing_1st', 'Return_Yds', 'Return_Td']\n",
-    "TE_data = TE_data.drop(te_drop_columns, axis=1)\n",
-    "# TE_data"
    ]
   }
  ],
