cleaaned up notebook

--- a/data-collection.ipynb
+++ b/data-collection.ipynb
@@ -70,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.pro-football-reference.com/years/2021/passing_advanced.htm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -81,8 +89,15 @@
     "\n",
     "table_contracts = pd.read_html('https://www.spotrac.com/nfl/contracts/sort-value/offense/all-time/free-agent-2021/limit-100/')\n",
     "\n",
-    "url_pro_football_reference = 'https://www.pro-football-reference.com/years/2022/passing_advanced.htm'\n",
-    "table_advanced = pd.read_html(url_pro_football_reference, header=1)[0]"
+    "passing_advanced = football.getAdvancedStats(\"passing\", \"2021\")\n",
+    "\n",
+    "# rushing_advanced = football.getAdvancedStats(\"rushing\", \"2021\")\n",
+    "# url = \"https://www.pro-football-reference.com/years/2021/rushing_advanced.htm\"\n",
+    "# temp = pd.read_html(url)\n",
+    "\n",
+    "# passing_advanced\n",
+    "\n",
+    "# temp\n"
    ]
   },
   {
@@ -95,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,33 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We had to remove some characters that were throwing off our ability to merge the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "passing_advanced = table_advanced\n",
-    "passing_advanced = passing_advanced.head(40)\n",
-    "passing_advanced['Player'] = passing_advanced['Player'].str.replace('*', '')\n",
-    "passing_advanced['Player'] = passing_advanced['Player'].str.replace('+', '')\n",
-    "# passing_advanced"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Here is where we collect isolate the data for quarterbacks and merge the basic dataframe with one of the advanced statistics ones."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +145,25 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RB_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m rb_merged \u001b[39m=\u001b[39m football\u001b[39m.\u001b[39maddAdvanced(RB_data, passing_advanced)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RB_data' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "This is isolating data for running backs, wide receivers, and tight ends."
+    "# rb_merged = football.addAdvanced(RB_data, rushing_advanced)\n",
+    "# rb_merged"
    ]
   }
  ],
