Broke up by position, fixed bugs

--- a/WR.ipynb
+++ b/WR.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data collection and imputation"
+    "## Running Backs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,21 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('2022-offense.xlsx', sheet_name='Offense_Prior_Actuals', header=3)\n",
-    "\n",
-    "# Drop columns that we don't need\n",
-    "drop_columns = ['GS', 'Bye', 'Notes', 'Rank', 'Y! Roto', 'Δ', 'Y! Old', 'Std', 'Δ.1', 'Std Old', 'PPR', 'Δ.2', 'PPR Old', '% Own', 'Fan Pts', 'PPG']\n",
-    "df = df.drop(drop_columns, axis=1)\n",
-    "\n",
-    "# Change names of duplicate columns\n",
-    "updated_columns = {'Yds': 'Passing_Yds', 'Yds.1': 'Rushing_Yds', 'Yds.2': 'Receiving_Yds', 'Yds.3': 'Return_Yds', \n",
-    "                   'TD': 'Passing_Td', 'TD.1': 'Rushing_Td', 'TD.2': 'Receiving_Td', 'TD.3': 'Return_Td', \n",
-    "                   '1st': 'Passing_1st', '1st.1': 'Rushing_1st', '1st.2': 'Receiving_1st'}\n",
-    "df = df.rename(columns=updated_columns)\n"
+    "df = Fantasy.read_data()"
    ]
   },
   {
@@ -70,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "QB_data, RB_data, WR_data, TE_data = football.makeRegularData(df)\n"
+    "TE_data = football.makeRegularData(df, \"WR\")\n"
    ]
   },
   {
@@ -87,15 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Passing advanced\n",
-    "passing_advanced = football.getAdvancedStats(\"passing\", \"2021\")\n",
-    "\n",
-    "# Rushing advanced\n",
-    "rushing_advanced = football.getAdvancedStats(\"rushing\", \"2021\")"
+    "# Advanced\n",
+    "rushing_advanced = football.getAdvancedStats(\"rushing\", \"2021\")\n",
+    "receiving_advanced = football.getAdvancedStats(\"receiving\", \"2021\") "
    ]
   },
   {
@@ -108,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +120,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Player_x</th>\n",
+       "      <th>Player</th>\n",
        "      <th>Pos_x</th>\n",
        "      <th>Team</th>\n",
        "      <th>GP</th>\n",
@@ -140,174 +128,343 @@
        "      <th>Rushing_Yds</th>\n",
        "      <th>Rushing_Td</th>\n",
        "      <th>Rushing_1st</th>\n",
-       "      <th>Tgt</th>\n",
-       "      <th>Rec</th>\n",
+       "      <th>Tgt_x</th>\n",
+       "      <th>Rec_x</th>\n",
        "      <th>...</th>\n",
-       "      <th>Att_y</th>\n",
-       "      <th>Yds</th>\n",
-       "      <th>TD</th>\n",
-       "      <th>1D</th>\n",
-       "      <th>YBC</th>\n",
-       "      <th>YBC/Att</th>\n",
-       "      <th>YAC</th>\n",
-       "      <th>YAC/Att</th>\n",
-       "      <th>BrkTkl</th>\n",
-       "      <th>Att/Br</th>\n",
+       "      <th>YBC/R</th>\n",
+       "      <th>YAC_y</th>\n",
+       "      <th>YAC/R</th>\n",
+       "      <th>ADOT</th>\n",
+       "      <th>BrkTkl_y</th>\n",
+       "      <th>Rec/Br</th>\n",
+       "      <th>Drop</th>\n",
+       "      <th>Drop%</th>\n",
+       "      <th>Int</th>\n",
+       "      <th>Rat</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>J. Taylor</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>Ind</td>\n",
+       "      <td>C. Kupp</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>LAR</td>\n",
        "      <td>17</td>\n",
-       "      <td>332</td>\n",
-       "      <td>1811</td>\n",
+       "      <td>4</td>\n",
        "      <td>18</td>\n",
-       "      <td>107</td>\n",
-       "      <td>51</td>\n",
-       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>191</td>\n",
+       "      <td>145</td>\n",
        "      <td>...</td>\n",
-       "      <td>332</td>\n",
-       "      <td>1811</td>\n",
-       "      <td>18</td>\n",
-       "      <td>107</td>\n",
-       "      <td>870</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>941</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>25</td>\n",
-       "      <td>13.3</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>846</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>124.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>J. Taylor</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>Ind</td>\n",
-       "      <td>17</td>\n",
-       "      <td>332</td>\n",
-       "      <td>1811</td>\n",
-       "      <td>18</td>\n",
-       "      <td>107</td>\n",
-       "      <td>51</td>\n",
-       "      <td>40</td>\n",
+       "      <td>D. Samuel</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>16</td>\n",
+       "      <td>59</td>\n",
+       "      <td>365</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>121</td>\n",
+       "      <td>77</td>\n",
        "      <td>...</td>\n",
-       "      <td>23</td>\n",
-       "      <td>89</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>53</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>36</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11.5</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>768</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>106.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>J. Taylor</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>Ind</td>\n",
-       "      <td>17</td>\n",
-       "      <td>332</td>\n",
-       "      <td>1811</td>\n",
-       "      <td>18</td>\n",
-       "      <td>107</td>\n",
-       "      <td>51</td>\n",
-       "      <td>40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19</td>\n",
-       "      <td>37</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0.6</td>\n",
+       "      <td>D. Adams</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>LV</td>\n",
+       "      <td>16</td>\n",
        "      <td>0</td>\n",
-       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>169</td>\n",
+       "      <td>123</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>592</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>115.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>J. Taylor</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>Ind</td>\n",
+       "      <td>J. Jefferson</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>Min</td>\n",
        "      <td>17</td>\n",
-       "      <td>332</td>\n",
-       "      <td>1811</td>\n",
-       "      <td>18</td>\n",
-       "      <td>107</td>\n",
-       "      <td>51</td>\n",
-       "      <td>40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>19</td>\n",
-       "      <td>151</td>\n",
-       "      <td>3</td>\n",
        "      <td>6</td>\n",
-       "      <td>86</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>167</td>\n",
+       "      <td>108</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>482</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>65</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.8</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>111.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>P. Taylor</td>\n",
-       "      <td>RB</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>9</td>\n",
-       "      <td>23</td>\n",
-       "      <td>89</td>\n",
+       "      <td>J. Jefferson</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>Min</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>167</td>\n",
+       "      <td>108</td>\n",
        "      <td>...</td>\n",
-       "      <td>332</td>\n",
-       "      <td>1811</td>\n",
-       "      <td>18</td>\n",
-       "      <td>107</td>\n",
-       "      <td>870</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>941</td>\n",
-       "      <td>2.8</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>85.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>A. Rodgers</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>79.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>N. Brown</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>Dal</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>25</td>\n",
-       "      <td>13.3</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>68</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>E. St. Brown</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>Chi</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>D. Brown</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>Was</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.9</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>69.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>D. Brown</td>\n",
+       "      <td>WR</td>\n",
+       "      <td>Was</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>22</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>118.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>187 rows × 54 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Player_x Pos_x Team  GP  Att_x  Rushing_Yds  Rushing_Td  Rushing_1st  Tgt  \\\n",
-       "0  J. Taylor    RB  Ind  17    332         1811          18          107   51   \n",
-       "1  J. Taylor    RB  Ind  17    332         1811          18          107   51   \n",
-       "2  J. Taylor    RB  Ind  17    332         1811          18          107   51   \n",
-       "3  J. Taylor    RB  Ind  17    332         1811          18          107   51   \n",
-       "4  P. Taylor    RB   GB   9     23           89           1            5    2   \n",
+       "           Player Pos_x Team  GP  Att_x  Rushing_Yds  Rushing_Td  Rushing_1st  \\\n",
+       "0         C. Kupp    WR  LAR  17      4           18           0            1   \n",
+       "1       D. Samuel    WR   SF  16     59          365           8           21   \n",
+       "2        D. Adams    WR   LV  16      0            0           0            0   \n",
+       "3    J. Jefferson    WR  Min  17      6           14           0            1   \n",
+       "4    J. Jefferson    WR  Min  17      6           14           0            1   \n",
+       "..            ...   ...  ...  ..    ...          ...         ...          ...   \n",
+       "182    A. Rodgers    WR   GB  16      1           11           0            1   \n",
+       "183      N. Brown    WR  Dal  13      0            0           0            0   \n",
+       "184  E. St. Brown    WR  Chi  13      3           14           0            2   \n",
+       "185      D. Brown    WR  Was  15      1           -4           0            0   \n",
+       "186      D. Brown    WR  Was  15      1           -4           0            0   \n",
        "\n",
-       "   Rec  ...  Att_y   Yds  TD   1D  YBC  YBC/Att  YAC  YAC/Att BrkTkl Att/Br  \n",
-       "0   40  ...    332  1811  18  107  870      2.6  941      2.8     25   13.3  \n",
-       "1   40  ...     23    89   1    5   53      2.3   36      1.6      2   11.5  \n",
-       "2   40  ...     19    37   2    3   25      1.3   12      0.6      0         \n",
-       "3   40  ...     19   151   3    6   86      4.5   65      3.4      4    4.8  \n",
-       "4    2  ...    332  1811  18  107  870      2.6  941      2.8     25   13.3  \n",
+       "     Tgt_x  Rec_x  ...  YBC/R  YAC_y  YAC/R  ADOT  BrkTkl_y  Rec/Br  Drop  \\\n",
+       "0      191    145  ...    7.6    846    5.8   8.6        10    14.5     8   \n",
+       "1      121     77  ...    8.3    768   10.0   8.4        13     5.9    10   \n",
+       "2      169    123  ...    7.8    592    4.8   9.6         5    24.6     3   \n",
+       "3      167    108  ...   10.5    482    4.5  12.4         5    21.6     7   \n",
+       "4      167    108  ...    0.5     21    5.3   0.2         0             0   \n",
+       "..     ...    ...  ...    ...    ...    ...   ...       ...     ...   ...   \n",
+       "182      8      4  ...   -4.0      0    0.0  -4.0         0             0   \n",
+       "183     25     16  ...    7.3     68    4.3   9.1         1    16.0     1   \n",
+       "184     17      9  ...      0      0      0     0         0       0     0   \n",
+       "185     25     12  ...   10.9     34    2.8  15.2         1    12.0     1   \n",
+       "186     25     12  ...    3.5     22   11.0   3.5         0             0   \n",
        "\n",
-       "[5 rows x 35 columns]"
+       "     Drop% Int    Rat  \n",
+       "0      4.2   5  124.8  \n",
+       "1      8.3   4  106.2  \n",
+       "2      1.8   3  115.3  \n",
+       "3      4.2   2  111.3  \n",
+       "4      0.0   0   85.8  \n",
+       "..     ...  ..    ...  \n",
+       "182    0.0   0   79.2  \n",
+       "183    4.0   0   86.1  \n",
+       "184      0   0      0  \n",
+       "185    4.0   0   69.6  \n",
+       "186    0.0   0  118.7  \n",
+       "\n",
+       "[187 rows x 54 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Merge Datasets\n",
-    "qb_merged = football.addAdvanced(QB_data, passing_advanced)\n",
-    "rb_merged = football.addAdvanced(RB_data, rushing_advanced)"
+    "WR_rushing = football.addAdvanced(TE_data, rushing_advanced)\n",
+    "WR = football.addAdvanced(WR_rushing, receiving_advanced)\n",
+    "WR"
    ]
   },
   {
@@ -328,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +688,7 @@
        "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
