--- a/RB.ipynb
+++ b/RB.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = Fantasy.read_data()"
+    "df, y = Fantasy.read_data()"
    ]
   },
   {
