--- a/TE.ipynb
+++ b/TE.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = Fantasy.read_data()"
+    "df, y = Fantasy.read_data()"
    ]
   },
   {
